add some modifications to the project

--- a/public/customer_info.html
+++ b/public/customer_info.html
@@ -47,13 +47,13 @@
                 <div class="request-signIn-page">
                     <div>
                         <div class="request-message"> SIGN IN TO ORDER </div>
-                        <div class="request-btn"><a href="/public/index.html"><div class="i"></div><div>Redirect...</div></a></div>
+                        <div class="request-btn"><a href="./index.html"><div class="i"></div><div>Redirect...</div></a></div>
                     </div>
                 </div>
                 <!----------------------------------------------->
                 <!---------- CUSTOMER DETAILS START ------------>
                 <form action="" method="post" class="form-container">
-                    <div class="form-title eds">
+                    <div class="header-title form-title eds">
                         <div class="ok-wrap ok-1"></div>
                         <div> Billed To </div>
                         <div class="edited-wrap edit-1"></div>
@@ -144,7 +144,7 @@
                     <!--------- CUSTOMER FORM END ------------>
                     <!--------- DELIVERY METHOD START ------------>
                     <div class="delivery-method-wrapper">
-                        <div class="delivery-title eds">
+                        <div class="header-title delivery-title eds">
                             <div class="ok-wrap ok-2"></div>
                             <div> Delivery Method </div>
                             <div class="edited-wrap edit-2"></div>
@@ -170,7 +170,7 @@
                     <!--------- DELIVERY METHOD END ------------>
                     <!--------- PAYMENT METHOD START ------------>
                     <div class="payment-method-wrapper">
-                        <div class="payment-title eds">
+                        <div class="header-title payment-title eds">
                             <div class="ok-wrap ok-3"></div>
                             <div> Payment Method </div>
                             <div class="edited-wrap edit-3"></div>
@@ -197,7 +197,7 @@
                     <!--------- PAYMENT METHOD END ------------>
                     <!--------- SUMMARY INFO START ------------>
                     <div class="summary-wrapper">
-                        <div class="summary-title"> Summary </div>
+                        <div class="header-title summary-title"> Summary </div>
                         <div class="summary-content">
                             <div>
                                 <div class="summary-cell-customer">
@@ -249,6 +249,12 @@
                                     </span>
                                 </div>
                                 <input type="submit" class="summary-btn-wrap"><div class="form-btn fbtn4"></div></input>
+                            </div>
+                            <div>
+                                <div class="item-ordered-wrapper">
+                                    <div class="order-title"> Preview Orders </div>
+                                    <div class="order-content"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
