--- a/public/index.html
+++ b/public/index.html
@@ -423,6 +423,7 @@
     <!-- SIGN-IN SECTION START -->
     <div class="sign-in-overlay">
         <div class="signIn-wrapper">
+            <div class="signInOut-close-btn"></div>
             <div class="sign-image-wrap">
                 <div><div class="image-user image-text"></div></div>
             </div>
