Modified customer form codes

--- a/public/company-name-2.html
+++ b/public/company-name-2.html
@@ -107,8 +107,8 @@
                     <div class="dash-btn in sign-in-btn">
                         <div class="i i-redirect"></div><div class="it-i"> Redirect... </div>
                     </div>
-                    <div class="dash-btn off sign-out-btn">
-                        <div class="i i-out"></div><div class="it-s"> Sign Out </div>
+                    <div class="dash-btn signOutBtn off sign-out-btn">
+                        <div class="i signOutBtn i-out"></div><div class="signOutBtn it-s"> Sign Out </div>
                     </div>
                 </div>
             </div>
