--- a/public/customer_info.html
+++ b/public/customer_info.html
@@ -25,6 +25,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3XSKX6"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    
     <!-- End Google Tag Manager (noscript) -->
     <!-------LANDING PAGE ------------>
     <div class="landing-container">
@@ -293,6 +294,7 @@
                                 </div>
                                 <div class="invoice-structure-wrap">
                                     <div class="invoice-structure-container">
+                                        <h1 class="watermark"> screenshot </h1>
                                         <div class="invoice-header-wrap"> 
                                             <!--
                                             <div> Invoice </div>
@@ -315,10 +317,12 @@
                                             <ul/>
                                         </div>
                                         <div class="invoice-payment-wrap">
-                                            <div> Payment Info </div>
-                                            <div><span>Status:</span><em class="payment-status"> Online </em></div>
-                                            <div><span>Acc. Name:</span><em> E-commence </em></div>
+                                            <div> Payment & Delivery Info </div>
+                                            <div><span> Payment Method:</span><em class="payment-status"> ... </em></div>
+                                            <div><span> Payment Status:</span><em class="in-status"> Awaiting </em></div>
+                                            <div><span> Acc. Name:</span><em> E-commence </em></div>
                                             <div><span> Acc. No:</span><em> 4545-457955-87951 </em></div>
+                                            <div><span> Delivery Method:</span><em class="delivery-status in-status"> ... </em></div>
                                         </div>
                                         <div class="invoice-table-wrap">
                                             <div class="invoice-table-header">
