--- a/public/index.html
+++ b/public/index.html
@@ -105,14 +105,14 @@
                 <div class="user user-name">Not SignIn</div>
                 <div class="user user-email"></div>
                 <div class="user-btns">
-                    <div class="dash-btn in sign-in-btn">
-                        <div class="i i-in"></div><div class="it-i"> Sign In </div>
+                    <div class="dash-btn in signBtn sign-in-btn">
+                        <div class="i signBtn i-in"></div><div class="signBtn it-i"> Sign In </div>
                     </div>
-                    <div class="dash-btn off sign-out-btn">
-                        <div class="i i-out"></div><div class="it-s"> Sign Out </div>
+                    <div class="dash-btn off signOutBtn sign-out-btn">
+                        <div class="i signOutBtn i-out"></div><div class="signOutBtn it-s"> Sign Out </div>
                     </div>
-                    <div class="dash-btn off user-edit-btn">
-                        <div class="i i-edit"></div><div class="it-e"> Edit Profile </div>
+                    <div class="dash-btn off editBtn user-edit-btn">
+                        <div class="editBtn i i-edit"></div><div class="editBtn it-e"> Edit Profile </div>
                     </div>
                 </div>
             </div>
