modified project files .

--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,15 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-W3XSKX6');</script>
+
     <!-- End Google Tag Manager -->
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
+
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3XSKX6"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
     <!-- End Google Tag Manager (noscript) -->
     <!-------LANDING PAGE ------------>
     <div class="landing-container">
@@ -105,7 +108,7 @@
                 <div class="user user-name">Not SignIn</div>
                 <div class="user user-email"></div>
                 <div class="user-btns">
-                    <div class="dash-btn in signBtn sign-in-btn">
+                    <div class="dash-btn form-in-out-btn in signBtn sign-in-btn">
                         <div class="i signBtn i-in"></div><div class="signBtn it-i"> Sign In </div>
                     </div>
                     <div class="dash-btn off signOutBtn sign-out-btn">
@@ -423,7 +426,7 @@
     <!-- SIGN-IN SECTION START -->
     <div class="sign-in-overlay">
         <div class="signIn-wrapper">
-            <div class="signInOut-close-btn"></div>
+            <div class="signInOut-close-btn form-in-out-btn"></div>
             <div class="sign-image-wrap">
                 <div><div class="image-user image-text"></div></div>
             </div>
