modified controlCenter page and others

--- a/public/company-name-2.html
+++ b/public/company-name-2.html
@@ -519,14 +519,14 @@
     <script src="./js/landing-page.js"></script>
     <script src="./js/main.js" type="module"></script>
     <script src="./js/main-categories/categories.js" type="module"></script>
-    <script src="./js/search.js" defer></script>
-    <script src="./js/userDashBoard.js" defer></script>
+    <script src="./js/search.js" async></script>
+    <script src="./js/userDashBoard.js" async></script>
     <script src="./js/footer.js"></script>
     <!--<script src="./js/connection_status.js" type="module"></script>-->
     
     <!-- plugins for js start here -->
-    <script src="./js/plugins/firebase-app-init.js" type="module" defer></script>
-    <script src="./js/firebase/mainAuth.js" type="module" defer></script>
+    <script src="./js/plugins/firebase-app-init.js" type="module" async></script>
+    <script src="./js/firebase/mainAuth.js" type="module" async></script>
 </body>
 
 </html>
