--- a/public/customer_info.html
+++ b/public/customer_info.html
@@ -397,7 +397,7 @@
     <!-- plugins for js start here -->
     <script src="./js/sw-register.js"></script>
     <script src="./js/landing-page.js"></script>
-    <script src="./js/plugins/firebase-app-init.js" type="module"></script>
+    <script src="./js/plugins/firebase-app-init.js" type="module" async></script>
     <script src="./js/customer_details.js" type="module"></script>
 
     <!--
