update of codes

--- a/public/company-name-1.html
+++ b/public/company-name-1.html
@@ -520,8 +520,7 @@
 
 
 
-    
-    <script src="./js/sw-register.js"></script>
+        <!--<script src="./js/sw-register.js"></script>-->
     <script src="./js/landing-page.js"></script>
     <script src="./js/main.js" type="module"></script>
     <script src="./js/main-categories/categories.js" type="module"></script>
