--- a/public/company-name-2.html
+++ b/public/company-name-2.html
@@ -514,8 +514,7 @@
     </div>
     <!-- MAIN CONTENT END-->
 
-
-    <script src="./js/sw-register.js"></script>
+        <!--<script src="./js/sw-register.js"></script>-->
     <script src="./js/landing-page.js"></script>
     <script src="./js/main.js" type="module"></script>
     <script src="./js/main-categories/categories.js" type="module"></script>
